Test/dafny0/SubsetTypesResolution.dfy.expect
SubsetTypesResolution.dfy(45,6): Error: RHS (of type int -> int) not assignable to LHS (of type int -> nat) (covariant type parameter 1 would require nat <: int)
SubsetTypesResolution.dfy(52,6): Error: RHS (of type int -> int) not assignable to LHS (of type int -> nat) (covariant type parameter 1 would require nat <: int)
SubsetTypesResolution.dfy(64,20): Error: RHS (of type set<int>) not assignable to LHS (of type set<nat>) (covariant type parameter would require nat <: int)
SubsetTypesResolution.dfy(65,6): Error: RHS (of type set<int>) not assignable to LHS (of type set<nat>) (covariant type parameter would require nat <: int)
SubsetTypesResolution.dfy(67,13): Error: type of corresponding source/RHS (set<int>) does not match type of bound variable (set<nat>) (covariant type parameter would require nat <: int)
SubsetTypesResolution.dfy(76,8): Error: RHS (of type set<int>) not assignable to LHS (of type set<nat>) (covariant type parameter would require nat <: int)
SubsetTypesResolution.dfy(78,15): Error: type mismatch for argument 0 (function expects set<nat>, got set<int>) (covariant type parameter would require nat <: int)
SubsetTypesResolution.dfy(80,7): Error: incorrect type of method in-parameter 0 (expected set<nat>, got set<int>) (covariant type parameter would require nat <: int)
SubsetTypesResolution.dfy(88,7): Error: type mismatch for argument 0 (function expects set<nat>, got set<int>) (covariant type parameter would require nat <: int)
SubsetTypesResolution.dfy(85,18): Error: Function body type mismatch (expected set<nat>, got set<int>) (covariant type parameter would require nat <: int)
SubsetTypesResolution.dfy(99,24): Error: type mismatch for argument 0 (function expects set<nat>, got set<int>) (covariant type parameter would require nat <: int)
SubsetTypesResolution.dfy(101,15): Error: type mismatch for argument 0 (function expects set<nat>, got set<int>) (covariant type parameter would require nat <: int)
SubsetTypesResolution.dfy(102,6): Error: RHS (of type set<int> -> set<int>) not assignable to LHS (of type set<int> -> set<nat>) (covariant type parameter 1 would require set<nat> <: set<int>) (covariant type parameter would require nat <: int)
SubsetTypesResolution.dfy(107,15): Error: type mismatch for argument 0 (function expects set<nat>, got set<int>) (covariant type parameter would require nat <: int)
SubsetTypesResolution.dfy(109,6): Error: RHS (of type set<int> -> set<int>) not assignable to LHS (of type set<int> -> set<nat>) (covariant type parameter 1 would require set<nat> <: set<int>) (covariant type parameter would require nat <: int)
SubsetTypesResolution.dfy(112,11): Error: Function body type mismatch (expected set<nat>, got set<int>) (covariant type parameter would require nat <: int)
SubsetTypesResolution.dfy(136,22): Error: RHS (of type nat -> int) not assignable to LHS (of type int -> int) (contravariant type parameter 0 would require nat <: int)
SubsetTypesResolution.dfy(137,22): Error: RHS (of type nat -> nat) not assignable to LHS (of type int -> int) (contravariant type parameter 0 would require nat <: int)
SubsetTypesResolution.dfy(142,22): Error: RHS (of type int -> int) not assignable to LHS (of type int -> nat) (covariant type parameter 1 would require nat <: int)
SubsetTypesResolution.dfy(144,22): Error: RHS (of type nat -> int) not assignable to LHS (of type int -> nat) (contravariant type parameter 0 would require nat <: int)
SubsetTypesResolution.dfy(145,22): Error: RHS (of type nat -> nat) not assignable to LHS (of type int -> nat) (contravariant type parameter 0 would require nat <: int)
SubsetTypesResolution.dfy(158,22): Error: RHS (of type int -> int) not assignable to LHS (of type nat -> nat) (covariant type parameter 1 would require nat <: int)
SubsetTypesResolution.dfy(160,22): Error: RHS (of type nat -> int) not assignable to LHS (of type nat -> nat) (covariant type parameter 1 would require nat <: int)
23 resolution/type errors detected in SubsetTypesResolution.dfy
